<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_box_one"
        style="@style/whiteBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_wide"
        android:layout_marginTop="@dimen/margin_wide"
        android:layout_marginEnd="@dimen/margin_wide"
        android:text="@string/tv_box_one_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_box_two"
        style="@style/whiteBox"
        android:layout_width="130dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin_wide"
        android:layout_marginTop="@dimen/margin_wide"
        android:text="@string/tv_box_two_text"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_box_one" />

    <TextView
        android:id="@+id/tv_box_three"
        style="@style/whiteBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_wide"
        android:layout_marginEnd="@dimen/margin_wide"
        android:text="@string/tv_box_three_text"
        app:layout_constraintBottom_toTopOf="@+id/tv_box_four"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_box_two"
        app:layout_constraintTop_toTopOf="@+id/tv_box_two"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <TextView
        android:id="@+id/tv_box_four"
        style="@style/whiteBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_wide"
        android:layout_marginEnd="@dimen/margin_wide"
        android:text="@string/tv_box_four_text"
        app:layout_constraintBottom_toTopOf="@+id/tv_box_five"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_box_two"
        app:layout_constraintTop_toBottomOf="@+id/tv_box_three" />

    <TextView
        android:id="@+id/tv_box_five"
        style="@style/whiteBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_wide"
        android:layout_marginEnd="@dimen/margin_wide"
        android:text="@string/tv_box_five_text"
        app:layout_constraintBottom_toBottomOf="@+id/tv_box_two"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_box_two"
        app:layout_constraintTop_toBottomOf="@+id/tv_box_four" />

    <TextView
        android:id="@+id/tv_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_wide"
        android:layout_marginTop="@dimen/margin_wide"
        android:fontFamily="@font/roboto"
        android:text="@string/tv_label_text"
        android:textSize="@dimen/box_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_box_two" />

    <TextView
        android:id="@+id/tv_instruction"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_wide"
        android:layout_marginEnd="@dimen/margin_wide"
        android:text="@string/tv_instruction_text"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_label" />

    <Button
        android:id="@+id/btn_red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_red_text"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_yellow"
        app:layout_constraintEnd_toStartOf="@+id/btn_yellow"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_yellow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_wide"
        android:text="@string/tv_yellow_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_green"
        app:layout_constraintStart_toEndOf="@+id/btn_red" />

    <Button
        android:id="@+id/btn_green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_green_text"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_yellow" />

</androidx.constraintlayout.widget.ConstraintLayout>